--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "apollo-boost": "^0.4.9",
     "graphql": "^16.3.0",
+    "node-sass": "^7.0.1",
     "react": "^18.0.0",
     "react-apollo": "^3.1.5",
     "react-dom": "^18.0.0",
@@ -24,7 +25,6 @@
     "react-scripts": "5.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.51.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
