--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "no-unused-vars": "off",
     "no-use-before-define": "off",
     "no-underscore-dangle": "off",
+    "react/require-default-props": "off",
     "no-multiple-empty-lines": [
       "error",
       {
