--- a/package.json
+++ b/package.json
@@ -4,30 +4,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.5.10",
-    "@graphql-codegen/cli": "^2.6.2",
+    "@apollo/client": "^3.9.9",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.1.0",
     "@types/jest": "^27.0.1",
-    "@types/lodash.clonedeep": "^4.5.7",
-    "@types/node": "^17.0.23",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/lodash.clonedeep": "^4.5.9",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.73",
+    "@types/react-dom": "^18.2.23",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "apollo-boost": "^0.4.9",
-    "graphql": "^16.3.0",
-    "node-sass": "^7.0.1",
-    "react": "^18.0.0",
+    "graphql": "^16.8.1",
+    "node-sass": "^9.0.0",
+    "react": "^18.2.0",
     "react-apollo": "^3.1.5",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.2.8",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "typescript": "^4.4.2",
+    "typescript": "^5.4.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -52,7 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/introspection": "2.1.1",
     "@graphql-codegen/typescript": "2.4.8",
     "@graphql-codegen/typescript-operations": "2.3.5",
@@ -70,7 +69,7 @@
     "gh-pages": "^4.0.0",
     "prettier": "^2.6.2"
   },
-    "engines": {
+  "engines": {
     "node": "20.10.0"
   }
 }
