--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "shop",
-  "homepage": "https://SergeyShapliuk.github.io/shop/",
+  "name": "scandiweb-test",
+  "homepage": "https://SergeyShapliuk.github.io/shop-test/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
