--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
   },
   "browserslist": {
     "production": [
-      "last 1 version",
-      ",> 1%",
-      "not dead"
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
     "development": [
       "last 1 chrome version",
